tests/neg-custom-args/captures/capt-depfun.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capt-depfun.scala:11:43 ----------------------------------
11 |  val dc: ((Str^{y, z}) => Str^{y, z}) = ac(g()) // error // error: separatioon
   |                                         ^^^^^^^
   |                                         Found:    Str^{} ->{ac, y, z} Str^{y, z}
   |                                         Required: Str^{y, z} => Str^{y, z}
   |
   |                                         where:    => refers to a fresh root capability in the type of value dc
   |
   |
   |                                         Note that the existential capture root in Str^{x} => Str^{x}
   |                                         cannot subsume the capability <cap of (x: C^): Str^{x} => Str^{x}>
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/capt-depfun.scala:11:24 -------------------------------------------------------
11 |  val dc: ((Str^{y, z}) => Str^{y, z}) = ac(g()) // error // error: separatioon
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |           Separation failure: value dc's type Str^{y, z} => Str^{y, z} hides parameters y and z.
   |           The parameters need to be annotated with @consume to allow this.
